<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="name_list" translatable="false">Playlist market</string>
    <string name="night_theme" translatable="false">Темная тема</string>
    <string name="give" translatable="false">Поделиться приложением</string>
    <string name="group" translatable="false">Написать в поддержку</string>
    <string name="acsept" translatable="false">Пользовательское соглашение</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="ref" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="mail" translatable="false">sevlaria@yandex.ru</string>
    <string name="theme" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="oferta" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="hint_track_name" translatable="false">Название исполнителя</string>
    <string name="hint_artist_name" translatable="false">Название трека</string>
    <string name="time_track" translatable="false">2.13</string>
    <string name="no_internet" translatable="false">Проблемы со связью \n
                                                        \n
                                                        Загрузка не удалась. Проверьте подключение
        к интернету</string>
    <string name="update">Обновить</string>
    <string name="no_search">Ничего не найдено</string>
    <string name="your_search">Вы искали</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="times">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="year">Год</string>
    <string name="zhanr">Жанр</string>
    <string name="country">Страна</string>
    <string name="name_track">Название трека</string>

</resources>