<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/day_theme_main"
    android:paddingHorizontal="@dimen/size_0">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_list"
        android:layout_gravity="start"
        android:paddingStart="@dimen/size_12"
        android:paddingTop="@dimen/size_10"
        android:paddingBottom="@dimen/size_12"
        android:layout_marginVertical="@dimen/size_0"
        android:paddingEnd="62dp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_0"
        android:textSize="@dimen/size_22sp"
        android:layout_marginBottom="@dimen/radius"/>

    <LinearLayout
        style="@style/day_theme_main"
       >

        <Button
            android:id="@+id/button_search"
            android:layout_marginTop="@dimen/size_28"
            android:layout_marginBottom="@dimen/padding_8"
            android:text="@string/search"
            app:icon="@drawable/button_search"
            style="@style/button_main_style" />

        <Button
            android:id="@+id/button_media"
            android:layout_marginVertical="@dimen/padding_8"
            android:text="@string/media"
            app:icon="@drawable/media_music"
            style="@style/button_main_style" />

        <Button
            android:id="@+id/button_settings"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginBottom="@dimen/size_28"
            android:text="@string/settings"
            app:icon="@drawable/set"
           style="@style/button_main_style" />

    </LinearLayout>

</LinearLayout>