<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"

            android:src="@drawable/search"
            android:padding="12dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:paddingStart="12dp"
            android:text="@string/settings"
            android:textColor="@color/YPBlack"
            android:textSize="22dp"
            android:typeface="normal" />


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radius"
            android:text="@string/night_theme"
            android:textSize="@dimen/radius"
            android:typeface="normal"
            android:paddingVertical="21dp"
            android:textColor="@color/black"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            android:paddingVertical="11dp"
            android:paddingStart="9dp"
            android:paddingEnd="0dp"
            android:scrollbarSize="0dp"
            android:textSize="0sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give"
            android:textSize="@dimen/radius"
            android:typeface="normal"
            android:paddingVertical="21dp"
            android:layout_marginStart="@dimen/radius"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/light_mode"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"

            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textSize="@dimen/radius"
            android:typeface="normal"
            android:paddingVertical="21dp"
            android:layout_marginStart="@dimen/radius"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/group"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"

            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acsept"
            android:textSize="@dimen/radius"
            android:typeface="normal"
            android:paddingVertical="21dp"
            android:layout_marginStart="@dimen/radius"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/light_mode"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"

            />
    </FrameLayout>


</LinearLayout>